--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eject": "react-scripts eject"
   },
   "engines": {
-    "node": "16.x"
+    "node": "12.18.2"
   },
   "eslintConfig": {
     "extends": [
